--- a/themes/montessori-theme/sass/_montessori.scss
+++ b/themes/montessori-theme/sass/_montessori.scss
@@ -8,13 +8,26 @@ li {
     font-size: $font_body_size_mob;
 }
 
-.main-history {
-    margin: 0 auto;
+.history-content{
+  width:100%;
+  flex-wrap:wrap-reverse;
+}
+.history-title{
+  margin-bottom: 0px;
+  flex:0 70%;
+}
 
+.main-history {
+@include flex(flex-end,space-between);
     .history-img {
         float: left;
         width: 190px;
         height: 219px;
+        @include desktop {
+            width: 350px;
+            height: auto;
+            padding-bottom: 40px;
+        };
 
         img {
             width: 100%;
@@ -26,6 +39,9 @@ li {
         padding-top: 4px;
         text-align: left;
         display: block;
+        @include desktop {
+            font-size: 1.5rem;
+        };
     }
 }
 ////************philosophy Section ************/////
@@ -46,7 +62,8 @@ li {
         width: 100%;
     }
 
-    .philosophy-grid ,{
+
+    .philosophy-grid {
         display: -ms-flexbox;
         display: flex;
         -ms-flex-align: center;
@@ -75,6 +92,7 @@ li {
             -o-transform-style: preserve-3d;
             transition: 3s;
             transform-style: preserve-3d;
+
             &:hover {
                 -webkit-backface-visibility: hidden;
                 -moz-backface-visibility: hidden;
@@ -137,11 +155,14 @@ li {
             bottom: -18px;
             line-height: 1.2;
             @include desktop {
-                font-size: 1.4rem;
-                -webkit-backface-visibility: hidden;
-                -moz-backface-visibility: hidden;
-                -o-backface-visibility: hidden;
-                backface-visibility: hidden;
+                .show {
+                    font-size: 1.4rem;
+                    -webkit-backface-visibility: hidden;
+                    -moz-backface-visibility: hidden;
+                    -o-backface-visibility: hidden;
+                    backface-visibility: hidden;
+                }
+
                 &:hover {
                     -webkit-backface-visibility: hidden;
                     -moz-backface-visibility: hidden;
@@ -165,7 +186,7 @@ li {
             overflow-y: scroll;
             font-size: 1.3rem;
             left: 0;
-            z-index: 1000000;
+            z-index: 1000;
             height: 300px;
             width: 300px;
             border-radius: 10px;
@@ -191,14 +212,12 @@ li {
         }
     }
 }
-
 ////************End philosophy Section ************/////
 ////////*******Start Materials Section******/////////
 ////////*******End Materials Section******/////////
 /////*Start Benefits Section**/////
-
 .benefits li {
-    list-style-type: circle;
+    list-style-type: disc;
 }
 /*Start Resources Section  */
 .green-btn {
@@ -213,9 +232,8 @@ li {
     padding: 12px 39px;
     text-shadow: none;
     letter-spacing: 0.8px;
-    display: block;
+    display: inline-block;
     @include desktop {
-        display: block;
         width: 331px;
         height: 65px;
         font-size: 16px;
