--- a/themes/montessori-theme/sass/_nw-program.scss
+++ b/themes/montessori-theme/sass/_nw-program.scss
@@ -48,16 +48,43 @@
 	display: flex;
 	flex-direction: column;
 
-	.funding-img img {
-		width: 90%;
-	}
-
-	.funding-btn {
-		width: 40%;
+	.funding-img,.money-spend-img {
 		display: flex;
-		align-items: center;
+		justify-content: center;
+		img{
+			width: 95%;
+			height: 95%;
+			margin-right: 2px;
+		}
+	}
+	.funding-btn {
+		display: flex;
+		justify-content: center;
+		.green-btn{
+			padding: 10px;
+			width: 44.666%;
+			margin-right: 2px;
+		}
 	}
 }
+//School List Section
+.school-list{
+	display: flex;
+	flex-direction: column;
+	    .school-img{
+				display: flex;
+				justify-content: center;
+				img{
+				width:80%;
+				height:80%;
+
+		    }
+			 .address	.phone {
+				font-weight: bolder;
+			}
+   	}
+}
+
 //Preschools List Section
 
 .preschools-list {
@@ -66,27 +93,23 @@
 	.target {
 		margin: 0 auto;
 	}
-
 	span {
 		color: #248E6A;
 	}
 }
 //Enrollment Section
-
 .enroll {
-	width: 100%;
-
+display: flex;
+flex-direction: column;
 	.enroll-block {
 		max-width: 70%;
 		display: flex;
 		justify-content: space-around;
 		margin: 40px auto;
 		flex-direction: column;
-
 		.enroll-img {
 			margin-bottom: 50px;
 		}
-
 		.green-btn {
 			height: 47px;
 			display: inline-block;
@@ -152,6 +175,7 @@
 				border-radius: 50%;
 			}
 		}
+
 		.back {
 			border-radius: 50%;
 			position: absolute;
@@ -188,9 +212,6 @@
 		backface-visibility: hidden;
 	}
 
-
-
-
 	.teacher_det {
 		text-align: center;
 
@@ -199,53 +220,3 @@
 		}
 	}
 }
-//Enrollment Section
-// .teacher-grid{
-// 	// @include flex(center,space-around);
-// 	// flex-wrap: wrap;
-// display: flex;
-//
-// 	// position: relative;
-//
-// .switch {
-// 	box-shadow: inset 1px 1px 40px 0 rgba(0,0,0,.45);
-// 	border-radius: 50%;
-// 	width: 125px;
-// 	height: 125px;
-//
-//
-//
-//
-// 	.teacher-img {
-// 		background-size: cover;
-// 		position: relative;
-// 		border-radius: 50%;
-// 		width: 125px;
-// 		height: 125px;
-// 		background: #aff1d3;
-// 		flex: 2 0 50%;
-//
-// 	}
-//
-// 	p {
-// border-radius: 50%;
-// top: 60px;
-// position: absolute;
-// width: 125px;
-// overflow: hidden;
-// text-overflow: ellipsis;
-// height: 125px;
-// text-align: center;
-// 		display: none;
-// 	}
-//
-//
-//    }
-// 	 .teacher_name{
-// 		 text-align: center;
-//
-// 	 	p{
-// 	 		font-size: 50%;
-// 	 	}
-// }
-// }
