work in newsletter section in about bage creat read more button and work in large member section

--- a/themes/montessori-theme/sass/_nw-program.scss
+++ b/themes/montessori-theme/sass/_nw-program.scss
@@ -18,7 +18,7 @@
 	background-color: grey;
 
 	h1 {
-		font-family: $font_title;
+		font-family: Asap;
 		font-size: $h1_size_mob;
 		font-weight: normal;
 		line-height: $basic_hline_height * 4.2;
