--- a/themes/montessori-theme/sass/_about.scss
+++ b/themes/montessori-theme/sass/_about.scss
@@ -14,6 +14,7 @@
 	padding-left: $basic_pading * 2;
 	padding-right: $basic_pading * 2;
 	align-items: center;
+	background-color: grey;
 
 	h1 {
 		font-family: $font_title;
@@ -25,34 +26,66 @@
 	}
 }
 
+
+// about NW School Section
+.about-school{
+
+}
+
+
+
+// Members List Section
+
+
+
+
+
+
+
+
+// Members at Large Section
+.members_at_large{
+	display: flex{
+
+	}
+}
+
+
+// Meeting Minutes Section
+.meeting-minutes{
+	display: flex;
+	justify-content: center;
+	     .red-more{
+				 align-self: flex-end;
+
+			 }
+
+}
+
+
+
+// Archive Section
 .archive {
 	margin-left: 0 auto;
-	// General layout
-	.site-content {
-		margin: 0 auto;
-		padding: 0 auto ;
-	}
 
 	.target {
 		background-color: grey;
 		width: 100%;
 		height: 10%;
-		height: 160px;
 		padding: $basic_pading;
 		display: none;
 	}
 }
 
 
-.about-school{
-	margin: 0px;
+// newsLetter Section
+
+.newsLetter{
+	display: flex;
+	flex-direction: column;
+	.red-more{
+	align-self: flex-end;
+	}
 
 
-
-.red-border-container {
-	width: $mobile_width;
-	padding: 10px;
-	height: auto;
-	margin-bottom: 70px;
-}
 }
