--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -1413,7 +1413,8 @@ li {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
   -ms-flex-align: center;
-      align-items: center; }
+      align-items: center;
+  background-color: grey; }
   .about-wrapper h1 {
     font-family: "Asap";
     font-size: 2.5rem;
@@ -1422,26 +1423,36 @@ li {
     text-align: left;
     color: #000000; }
 
+.members_at_large {
+  display: -ms-flexbox;
+  display: flex; }
+
+.meeting-minutes {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center; }
+  .meeting-minutes .red-more {
+    -ms-flex-item-align: end;
+        align-self: flex-end; }
+
 .archive {
   margin-left: 0 auto; }
-  .archive .site-content {
-    margin: 0 auto;
-    padding: 0 auto; }
   .archive .target {
     background-color: grey;
     width: 100%;
     height: 10%;
-    height: 160px;
     padding: 0.625rem;
     display: none; }
 
-.about-school {
-  margin: 0px; }
-  .about-school .red-border-container {
-    width: 37.5rem;
-    padding: 10px;
-    height: auto;
-    margin-bottom: 70px; }
+.newsLetter {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column; }
+  .newsLetter .red-more {
+    -ms-flex-item-align: end;
+        align-self: flex-end; }
 
 site-main .involved-wrapper {
   width: 480px;
@@ -1527,7 +1538,7 @@ site-main .a green-btn {
       align-items: center;
   background-color: grey; }
   .nw-program-wrapper h1 {
-    font-family: "Asap";
+    font-family: Asap;
     font-size: 2.5rem;
     font-weight: normal;
     line-height: 2.625rem;
@@ -1699,7 +1710,6 @@ site-main .a green-btn {
   width: 95%;
   height: 160px;
   display: inline-block;
-  margin-bottom: 100px;
   margin-left: 7.5%;
   padding-right: 9.4%;
   padding-left: 15px;
