--- a/themes/montessori-theme/sass/_about.scss
+++ b/themes/montessori-theme/sass/_about.scss
@@ -40,9 +40,6 @@
 
 
 
-
-
-
 // Members at Large Section
 .members_at_large{
 	display: flex;
@@ -51,22 +48,20 @@
 	.members_at_large-grid{
 		display: flex;
     flex-wrap: wrap;
-		align-items: center;
+		align-self: center;
 		.members_at_large-name{
        width: 33%;
-		  display: block;;
+		  display: flex;
+			p{
+			display: flex;
+			align-self: center;
+			}
+
 
 
 	   	}
-
 		}
-
 	}
-
-
-
-
-
 
 // Meeting Minutes Section
 .meeting-minutes{
@@ -74,12 +69,8 @@
 	justify-content: center;
 	     .red-more{
 				 align-self: flex-end;
-
 			 }
-
-}
-
-
+     }
 
 // Archive Section
 .archive {
