--- a/themes/montessori-theme/sass/_involved.scss
+++ b/themes/montessori-theme/sass/_involved.scss
@@ -19,6 +19,8 @@
   height: 120px;
   background-color: #4FC8A1;
   padding-top: 20px;
+  display: flex;
+  justify-content: space-between;
 
 a{
 color:#000;
@@ -66,27 +68,21 @@ color:#000;
 
 
 .support-containar {
-justify-content: space-between;
+justify-content: center;
+// display: flex;
 
 
 }
  .support-img{
-width: 200px;
-height:100%;
-display: inline-flex;
-text-align: center;
+   width:150px;
+   height: 150.60px;
+   display: inline-block;
+
 
 }
     img{
   width:100%;
   height: 100%;
-
-
-
-
-
-
-
 
 }
 
