--- a/themes/montessori-theme/sass/_variables.scss
+++ b/themes/montessori-theme/sass/_variables.scss
@@ -37,14 +37,12 @@ $black:#000000;
 $white: #fff;
 
 
-// Typography for fonts ///
+// Typography ///
 $font_title: 'Asap';
 $font_footer_header: 'PT Sans';
 $font_body: 'Noto Sans';
 $font_main: 'Noto Sans';
-
 ///Font Sizing ///
-
 // mobile sizes ///
 $h1_size_mob: 2.5rem;
 $h2_size_mob: 2rem;
